syntax = "proto3";

package protos;
option go_package = "github.com/empirefox/hybrid/grpc";

import "google/protobuf/any.proto";

message ValidatorV9Error {
  string tag = 1;
  string actualTag = 2;
  string namespace = 3;
  string structNamespace = 4;
  string field = 5;
  string structField = 6;
  uint32 kind = 7;
  string type = 8;
  string param = 9;
  // ignore value
  // google.protobuf.Any value = 10;
}